Fixed images not covering card properly

--- a/css/reset.css
+++ b/css/reset.css
@@ -15,7 +15,4 @@ h3 {
 img {
   display: block;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
 }
